--- a/prod-awx/01-prod-awx-controller.yaml
+++ b/prod-awx/01-prod-awx-controller.yaml
@@ -3,22 +3,20 @@ kind: Namespace
 metadata:
   labels:
     control-plane: controller-manager
-  name: awx
----
-
+  name: prod-awx
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: awx-operator-controller-manager
-  namespace: dev-awx
+  namespace:  prod-awx
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   creationTimestamp: null
   name: awx-operator-awx-manager-role
-  namespace: dev-awx
+  namespace:  prod-awx
 rules:
 - apiGroups:
   - route.openshift.io
@@ -124,7 +122,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: awx-operator-leader-election-role
-  namespace: dev-awx
+  namespace:  prod-awx
 rules:
 - apiGroups:
   - ""
@@ -190,7 +188,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: awx-operator-awx-manager-rolebinding
-  namespace: dev-awx
+  namespace:  prod-awx
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -198,13 +196,13 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: awx-operator-controller-manager
-  namespace: dev-awx
+  namespace:  prod-awx
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: awx-operator-leader-election-rolebinding
-  namespace: dev-awx
+  namespace:  prod-awx
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -212,7 +210,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: awx-operator-controller-manager
-  namespace: dev-awx
+  namespace:  prod-awx
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -225,7 +223,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: awx-operator-controller-manager
-  namespace: dev-awx
+  namespace:  prod-awx
 ---
 apiVersion: v1
 data:
@@ -253,7 +251,7 @@ data:
 kind: ConfigMap
 metadata:
   name: awx-operator-awx-manager-config
-  namespace: dev-awx
+  namespace:  prod-awx
 ---
 apiVersion: v1
 kind: Service
@@ -261,7 +259,7 @@ metadata:
   labels:
     control-plane: controller-manager
   name: awx-operator-controller-manager-metrics-service
-  namespace: dev-awx
+  namespace:  prod-awx
 spec:
   ports:
   - name: https
@@ -277,7 +275,7 @@ metadata:
   labels:
     control-plane: controller-manager
   name: awx-operator-controller-manager
-  namespace: dev-awx
+  namespace:  prod-awx
 spec:
   replicas: 1
   selector:
